--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -82,3 +82,34 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/* 自定义滚动条样式 */
+/* WebKit 浏览器 */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 50%; /* 使滑块呈现圆形 */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+::-webkit-scrollbar-button {
+  display: none; /* 隐藏滚动条的箭头 */
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent; /* 滑块颜色和轨道颜色 */
+}
