--- a/src/app/[locale]/home/home.module.scss
+++ b/src/app/[locale]/home/home.module.scss
@@ -18,3 +18,9 @@
     );
   }
 }
+
+.backgroundLine{
+  background-image: linear-gradient(45deg, #b7e0fc 25%, transparent 25%, transparent 50%, #f1f3f5 50%, #f1f3f5 75%, transparent 75%, transparent);
+  backgroundSize: 50px 50px;
+  animation: none
+}
